# wavslice

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  README.md  build_macos.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build_macos.yml
clib/: CMakeLists.txt
src/: App.css  App.tsx  main.c  main.tsx  test.c  test.h  utils.h
src-c/: CMakeLists.txt
src-c/src/: main.c  msplit.c  utils.c  utils.h
src-c/src/cpp/: utils.hpp
src-cpp/: CMakeLists.txt
src-cpp/include/: midifile.cmake
src-cpp/src/: CONSTANTS.hpp  audio.cpp  audio.hpp  main.cpp  midi.cpp  midi.hpp  text.cpp  text.hpp  utils.cpp  utils.hpp
src-py/: build.sh  build_setup.sh  requirements.txt
src-py/src/: parse.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tsx/: App.tsx  main.css  main.tsx
src-tsx/components/: FileDropState.tsx  FileParseState.tsx  FileSave.tsx  Header.tsx  MarkerRow.tsx  MarkerVis.tsx  SearchButton.tsx
src-tsx/components/TextFormat/: TextFormatDialog.tsx
src-tsx/components/dialogs/: RemoteSessionDialog.tsx  TextFormatDialog.tsx
src-tsx/ctx/: fileDrop.ts  fileParseState.ts  filesState.ts  openFileDialog.ts
src-tsx/func/: ipc.ts  rpc.ts  tsme.ts
src-tsx/rpc/: binaries.ts  commands.ts  rpc.ts
src-tsx/svg/: IconSearch.tsx
src-tsx/utils/: globalKeyboard.ts  mimeTypes.ts  relativePosition.ts  transition.tsx
src/components/: FileDropState.tsx  FileSave.tsx  Shell.tsx  originalText.tsx
src/ctx/: fileDrop.ts
src/func/: rpc.ts
src/svg/: IconSearch.tsx
src/utils/: callback.tsx  classConcat.ts  reactTypes.ts
